--- a/index.html
+++ b/index.html
@@ -1,4 +1,19 @@
 <html>
+    <javascript>
+
+    </javascript>
     <b>Hello World</b>
+    <form name="frmFirst">
+        <table>
+        <tr>
+            <td><input type="number" name="numFirst"> </td>
+            <td><b> + </b></td>
+            <td><input type="number" name="numSecond"></td>
+            <td><button type="button">=</button></td>
+            <td><input type="number" name='NumAnswer' size='30'></td>
+        </tr>
+        </table>
+        
+    </form>
 </html>
  
