--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
-    <javascript>
+    <script type="text/javascript">
         function mathFunctions(){
             var num1 = document.getElementById("numFirst").value;
             var num2 = document.getElementById("numSecond").value;
             var numAnswer = num1 + num2;
             document.getElementById("NumAnswer").value = numAnswer;
         }
-    </javascript>
+    </script>
     <b>Hello World</b>
     <form name="frmFirst">
         <table>
