--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             var num1 = document.getElementById("numFirst").value;
             var num2 = document.getElementById("numSecond").value;
             var numAnswer = num1 + num2;
-            document.getElementById("NumAnswer").value = numAnswer;
+            document.getElementById("NumAnswer").value = numAnswer.toString();
         }
     </script>
     <b>Hello World</b>
