--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         function mathFunctions(){
             var num1 = document.getElementById("numFirst").value;
             var num2 = document.getElementById("numSecond").value;
-            var numAnswer = num1 + num2;
+            var numAnswer = parseInt(num1) + parseInt(num2);
             document.getElementById("NumAnswer").value = numAnswer.toString();
         }
     </script>
