--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <form name="frmFirst">
         <table>
         <tr>
-            <td><input type="number" name="numFirst" size='15'> </td>
+            <td><input type="number" id="numFirst" size='15'> </td>
             <td><b> + </b></td>
-            <td><input type="number" name="numSecond"></td>
+            <td><input type="number" id="numSecond"></td>
             <td><button type="button" onclick="mathFunctions()">=</button></td>
             <td><p id="numAnswer"></p></td>
         </tr>
