--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <table>
         <tr>
             <td><input type="number" id="numFirst" size='15'> </td>
-            <td><input type="radio" id="plus" name="operators" value="+" checked><br>
-                <input type="radio" id="minus" name="operators" value="-"><br>
-                <input type="radio" id="mulitply" name="operators" value="*"></td>
+            <td><input type="radio" id="plus" name="operators" value="+" checked>+<br>
+                <input type="radio" id="minus" name="operators" value="-">-<br>
+                <input type="radio" id="mulitply" name="operators" value="*">*</td>
             <td><input type="number" id="numSecond"></td>
             <td><button type="button" onclick="mathFunctions()">=</button></td>
             <td><p id="numAnswer"></p></td>
