--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <form name="frmFirst">
         <table>
         <tr>
-            <td><input type="number" id="numFirst" size='15'> </td>
+            <td><input type="number" id="numFirst"> </td>
             <td><input type="radio" id="plus" name="operators" value="+" checked>+<br>
                 <input type="radio" id="minus" name="operators" value="-">-<br>
                 <input type="radio" id="mulitply" name="operators" value="x">x<br>
