--- a/index.html
+++ b/index.html
@@ -24,21 +24,22 @@
             document.getElementById("numAnswer").innerHTML = numAnswer.toString();
         }
     </script>
-    <b>Hello World</b>
-    <form name="frmFirst">
-        <table>
-        <tr>
-            <td><input type="number" id="numFirst"> </td>
-            <td><input type="radio" id="plus" name="operators" value="+" checked>+<br>
-                <input type="radio" id="minus" name="operators" value="-">-<br>
-                <input type="radio" id="mulitply" name="operators" value="x">x<br>
-                <input type="radio" id="mulitply" name="operators" value="/">/</td>
-            <td><input type="number" id="numSecond"></td>
-            <td><button type="button" onclick="mathFunctions()">=</button></td>
-            <td><p id="numAnswer"></p></td>
-        </tr>
-        </table>
-        
-    </form>
+    <body>
+        <h1>Hello World!</h1>
+        <form name="frmFirst">
+            <table>
+            <tr>
+                <td><input type="number" id="numFirst"> </td>
+                <td><input type="radio" id="plus" name="operators" value="+" checked>+<br>
+                    <input type="radio" id="minus" name="operators" value="-">-<br>
+                    <input type="radio" id="mulitply" name="operators" value="x">x<br>
+                    <input type="radio" id="mulitply" name="operators" value="/">/</td>
+                <td><input type="number" id="numSecond"></td>
+                <td><button type="button" onclick="mathFunctions()">=</button></td>
+                <td><p id="numAnswer"></p></td>
+            </tr>
+            </table>
+        </form>
+    </body>
 </html>
  
