--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         function mathFunctions(){
             var num1 = document.getElementById("numFirst").value;
             var num2 = document.getElementById("numSecond").value;
-            alert(document.querySelector('input[name="operators"]:checked').value);
+            // alert(document.querySelector('input[name="operators"]:checked').value);
             var operator = document.querySelector('input[name="operators"]:checked').value;
             var numAnswer = 0;
             switch(operator) {
