--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+    <body>
     <script type="text/javascript">
         function mathFunctions(){
             var num1 = document.getElementById("numFirst").value;
@@ -23,9 +24,14 @@
             }
             document.getElementById("numAnswer").innerHTML = numAnswer.toString();
         }
+
+        var myVar = setInterval(myTimer, 1000);
+        function myTimer() {
+        var d = new Date();
+        document.getElementById("timer").innerHTML = d.toLocaleTimeString();
+        }
     </script>
-    <body>
-        <h1>Hello World!</h1>
+        <h1>Hello World!</h1><p id="timer"></p>
         <form name="frmFirst">
             <table>
             <tr>
