--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
 
         var myVar = setInterval(myTimer, 1000);
         function myTimer() {
-        var d = new Date();
-        document.getElementById("timer").innerHTML = d.toLocaleTimeString();
+            var now = new Date();
+            document.getElementById("timer").innerHTML = now.toLocaleTimeString();
         }
     </script>
-        <h1>Hello World!</h1><p id="timer"></p>
+        <h1>Hello World!</h1>
+        <b>Current Time: </b><p id="timer"></p>
         <form name="frmFirst">
             <table>
             <tr>
