--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
         var myVar = setInterval(myTimer, 1000);
         function myTimer() {
-            var now = new Date();
-            document.getElementById("timer").innerHTML = "Current Time: " + now.toLocaleTimeString();
+            var dtNow = new Date();
+            document.getElementById("timer").innerHTML = "Current Time: " + dtNow.toLocaleTimeString();
         }
     </script>
         <h1>Hello World!</h1>
